--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=Taller1
 
 #Database properties
 server.port=${APPLICATION_PORT:8080}
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5433/postgres}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
-spring.datasource.password=${DATABASE_PASSWORD:Admin}
+spring.datasource.password=${DATABASE_PASSWORD:postgres}
 spring.datasource.driver-class-name=${DATABASE_DRIVER:org.postgresql.Driver}
 
 spring.output.ansi.enabled=always
