--- a/.github/workflows/ci-cd-sonarcloud-java.yml
+++ b/.github/workflows/ci-cd-sonarcloud-java.yml
@@ -44,6 +44,11 @@ jobs:
         with:
           name: junit-reports
           path: target/surefire-reports/
+
+      - name: Build and analyze
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=SebasMa24_Taller1 -Dsonar.sources=src/main/java -Dsonar.plsql.database-dictionary=src/main/resources/db-dictionary.sql -Dsonar.coverage.exclusions=*/resources/static/,/resources/templates/*
       
       - name: Package JAR
         run: mvn clean install
@@ -84,4 +89,5 @@ jobs:
           package: '*.jar'
 
           
+
 
