--- a/.github/workflows/ci-cd-sonarcloud-java.yml
+++ b/.github/workflows/ci-cd-sonarcloud-java.yml
@@ -1,43 +1,56 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
+# Docs: https://github.com/Azure/webapps-deploy
+# More Azure Actions: https://github.com/Azure/actions
 
-name: Build, Test adn sonar - Azure Web App - Actividad5
+name: CI/CD Java + SonarCloud + Azure Web App - Actividad5
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
   workflow_dispatch:
+
+permissions:
+  contents: read
+
+env:
+  JAVA_VERSION: '21'
+  DISTRIBUTION: 'microsoft'
+  SONAR_HOST_URL: 'https://sonarcloud.io'
+  SONAR_PROJECT_KEY: 'SebasMa24_Taller1'
+  SONAR_ORGANIZATION: 'SebasMa24' # cambia si es necesario
+  AZURE_APP_NAME: 'Actividad5'
+  SLOT_NAME: 'Production'
 
 jobs:
   build_test_and_sonar:
-    name: Build, JUnit & SonarCloud
+    name: Build, Test & SonarCloud
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # necesario para análisis SonarCloud completo
 
-      - name: Set up Java version
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'microsoft'
-          
-      - name: Cache Maven dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-          
-      - name: Build and test with Maven (JUnit)
-        run: mvn clean verify
+          distribution: ${{ env.DISTRIBUTION }}
+          java-version: ${{ env.JAVA_VERSION }}
+          cache: 'maven'
+
+      - name: Build, Test & Analyze with SonarCloud
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          mvn -B -ntp clean verify org.jacoco:jacoco-maven-plugin:report \
+            org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Dsonar.host.url=${{ env.SONAR_HOST_URL }} \
+            -Dsonar.organization=${{ env.SONAR_ORGANIZATION }} \
+            -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }} \
+            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
+            -Dsonar.coverage.exclusions=**/resources/static/**,**/resources/templates/**
 
       - name: Upload JUnit test reports
         uses: actions/upload-artifact@v4
@@ -45,41 +58,31 @@ jobs:
           name: junit-reports
           path: target/surefire-reports/
 
-      - name: SonarCloud analysis
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-            mvn sonar:sonar \
-              -Dsonar.projectKey=SebasMa24_Taller1 \
-              -Dsonar.organization=sebasma24 \
-              -Dsonar.host.url=https://sonarcloud.io \
-              -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-              -Dsonar.sources=src/main/java \
-              -Dsonar.coverage.exclusions=*/resources/static/,/resources/templates/*
-              
-      - name: Package JAR
-        run: mvn clean package -DskipTest
-      
-      - name: Upload artifact for deployment job
+      - name: Package JAR (skip tests to save time)
+        run: mvn -B -DskipTests package
+
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: target/*.jar
 
   deploy:
     name: Deploy to Azure Web App
     runs-on: ubuntu-latest
     needs: build_test_and_sonar
+    if: ${{ github.ref == 'refs/heads/main' }}
+
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-  
+      id-token: write
+      contents: read
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -88,15 +91,8 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_5ED67239EB1A485EA9ADF43F51121F73 }}
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'Actividad5'
-          slot-name: 'Production'
-          package: '*.jar'
-
-          
-
-
-
-
+          app-name: ${{ env.AZURE_APP_NAME }}
+          slot-name: ${{ env.SLOT_NAME }}
+          package: target/*.jar
