--- a/.github/workflows/ci-cd-sonarcloud-java.yml
+++ b/.github/workflows/ci-cd-sonarcloud-java.yml
@@ -52,13 +52,17 @@ jobs:
             -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
             -Dsonar.coverage.exclusions=**/resources/static/**,**/resources/templates/**
 
-      - name: Upload JUnit test reports
+      - name: Upload all test reports (JUnit + Cucumber)
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: junit-reports
-          path: target/surefire-reports/
+          name: test-reports
+          path: | 
+            target/surefire-reports/
+            target/cucumber-report.html
+            target/cucumber.json
 
-      - name: Package JAR (skip tests to save time)
+      - name: Package JAR
         run: mvn -B -DskipTests package
 
       - name: Upload build artifact
