--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.6</version>
+		<version>3.5.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.Taller1</groupId>
@@ -28,8 +28,21 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<cucumber.version>7.16.1</cucumber.version>
+        <junit.version>5.10.2</junit.version>
 		<sonar.organization>sebasma24</sonar.organization>
 	</properties>
+	<dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -56,6 +69,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+    		<groupId>com.h2database</groupId>
+    		<artifactId>h2</artifactId>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
@@ -66,24 +84,59 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+			<version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
     		<groupId>io.cucumber</groupId>
-    		<artifactId>cucumber-java</artifactId>
-    		<version>7.30.0</version>
+    		<artifactId>cucumber-spring</artifactId>
+    		<version>${cucumber.version}</version>
     		<scope>test</scope>
-  		</dependency>
+		</dependency>
   		<dependency>
-    		<groupId>io.cucumber</groupId>
-    		<artifactId>cucumber-junit-platform-engine</artifactId>
-    		<version>7.30.0</version>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit-platform-engine</artifactId>
+			<version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter-api</artifactId>
     		<scope>test</scope>
-  		</dependency>
+		</dependency>
+		<dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter-engine</artifactId>
+    		<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-surefire-plugin</artifactId>
+            	<version>3.5.4</version>
+				<configuration>
+					<useModulePath>false</useModulePath> 
+                    <properties>
+                        <configurationParameters>
+                            cucumber.junit-platform.naming-strategy=long
+                        </configurationParameters>
+                    </properties>
+                </configuration>
+        	</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.14.1</version>
 				<configuration>
 					<annotationProcessorPaths>
 						<path>
@@ -108,7 +161,10 @@
 			<plugin>
             	<groupId>org.jacoco</groupId>
             	<artifactId>jacoco-maven-plugin</artifactId>
-            	<version>0.8.11</version>
+            	<version>0.8.14</version>
+				<configuration>
+        			<skip>true</skip>  <!-- Agrega esta línea -->
+    			</configuration>
             	<executions>
                		<execution>
                     	<goals>
