--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,7 +86,7 @@ jobs:
             target/cucumber-report.html
 
 # ======================================================================
-# 3. SCA – ANÁLISIS DE DEPENDENCIAS (OWASP Dependency Check)
+# 3. SCA – ANÁLISIS DE DEPENDENCIAS
 # ======================================================================
   security_dependencies:
     name: SCA - OWASP Dependency Check
@@ -111,7 +111,7 @@ jobs:
           path: dependency-check-report/
 
 # ======================================================================
-# 4. BUILD & DEPLOY – EMPAQUETAR Y DESPLEGAR A AZURE
+# 4. BUILD & DEPLOY – SOLO EN ESTA ETAPA SE GENERA EL .JAR
 # ======================================================================
   package_and_deploy:
     name: Build & Deploy to Azure
@@ -132,10 +132,11 @@ jobs:
           distribution: ${{ env.DISTRIBUTION }}
           java-version: ${{ env.JAVA_VERSION }}
 
-      - name: Package JAR
-        run: mvn -B -DskipTests package
+      # Solo aquí se construye el .jar
+      - name: Build JAR (skip tests)
+        run: mvn -B -DskipTests clean package
 
-      - name: Upload build artifact
+      - name: Upload JAR
         uses: actions/upload-artifact@v4
         with:
           name: java-app
@@ -145,6 +146,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: java-app
+          path: java-app
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -158,7 +160,7 @@ jobs:
         with:
           app-name: ${{ env.AZURE_APP_NAME }}
           slot-name: ${{ env.SLOT_NAME }}
-          package: "*.jar"
+          package: "java-app/*.jar"
 
 # ======================================================================
 # 5. DAST – ANÁLISIS DINÁMICO (OWASP ZAP)
