Enhance CI/CD workflow with OWASP ZAP analysis
Updated the CI/CD workflow to include new steps for dynamic analysis using OWASP ZAP and adjusted the version for the ZAP action.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -172,7 +172,9 @@ jobs:
 
     steps:
       - name: ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.7.0
+        uses: zaproxy/action-baseline@v0.10.0
+        env:
+          ZAP_DOCKER_IMAGE: ghcr.io/zaproxy/zap-stable
         with:
           target: "actividad5-f5dvbrbrdqfqaxbg.eastus2-01.azurewebsites.net"
           cmd_options: "-a"
@@ -182,3 +184,4 @@ jobs:
         with:
           name: zap-report
           path: zap-report.html
+
