--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -182,13 +182,15 @@ jobs:
           ZAP_DOCKER_IMAGE: ghcr.io/zaproxy/zap-stable
         with:
           target: "https://actividad5-f5dvbrbrdqfqaxbg.eastus2-01.azurewebsites.net"
-          cmd_options: "-a --autooff"
+          cmd_options: "-a --autooff -I"
+          github_token: ""
 
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
         with:
           name: zap-report
           path: zap-report.html
+
 
 
 
