--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -178,19 +178,19 @@ jobs:
     steps:
       - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.10.0
-        env:
-          ZAP_DOCKER_IMAGE: ghcr.io/zaproxy/zap-stable
         with:
           target: "https://actividad5-f5dvbrbrdqfqaxbg.eastus2-01.azurewebsites.net"
           cmd_options: "-a --autooff -I"
           token: ${{ secrets.GITHUB_TOKEN }}
           allow_issue_writing: false
+          artifact_name: ""
 
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
         with:
           name: zap-report
           path: zap-report.html
+
 
 
 
