--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -183,13 +183,14 @@ jobs:
           cmd_options: "-a --autooff -I"
           token: ${{ secrets.GITHUB_TOKEN }}
           allow_issue_writing: false
-          artifact_name: ""
+          artifact_name: "null"
 
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
         with:
           name: zap-report
           path: zap-report.html
+
 
 
 
