--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -182,8 +182,9 @@ jobs:
           target: "https://actividad5-f5dvbrbrdqfqaxbg.eastus2-01.azurewebsites.net"
           cmd_options: "-a --autooff -I -r zap-report.html"
           token: ${{ secrets.GITHUB_TOKEN }}
-          artifact_name: ""  # Forzar nombre vacío
+          artifact_name: "zap-report" 
           allow_issue_writing: false
+          continue-on-error: true
 
       - name: Upload manually generated report
         uses: actions/upload-artifact@v4
@@ -191,3 +192,4 @@ jobs:
           name: zap-security-scan-report
           path: zap-report.html
           retention-days: 30
+
