--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,13 +97,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up JDK
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'temurin'
-
-      - name: Build project (necesario para que DC resuelva dependencias)
+          distribution: ${{ env.DISTRIBUTION }}
+          java-version: ${{ env.JAVA_VERSION }}
+          cache: maven
+          
+      - name: Build project
         run: mvn -B clean install
 
       - name: Run OWASP Dependency Check
@@ -203,5 +204,6 @@ jobs:
           name: zap-security-scan-report
           path: zap-report.html
           retention-days: 30
+
 
 
