--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -156,7 +156,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.10.0
         with:
           target: "https://actividad5-f5dvbrbrdqfqaxbg.eastus2-01.azurewebsites.net"
-          cmd_options: "-a --autooff -I -r zap-report.html"
+          cmd_options: "-a --autooff -I"
           token: ${{ secrets.GITHUB_TOKEN }}
           allow_issue_writing: false
           fail_action: false
@@ -166,6 +166,7 @@ jobs:
         with:
           name: zap-report
           path: zap-report.html
+
 
 
 
