--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -157,6 +157,7 @@ jobs:
         with:
           target: "https://actividad5-f5dvbrbrdqfqaxbg.eastus2-01.azurewebsites.net"
           cmd_options: "-a --autooff -I"
+          artifact_name: "zap-report"
           token: ${{ secrets.GITHUB_TOKEN }}
           allow_issue_writing: false
           fail_action: false
@@ -166,6 +167,7 @@ jobs:
         with:
           name: zap-report
           path: zap-report.html
+
 
 
 
